--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TradingView Advanced Chart</title>
   <style>
-    html, body { height:100%; margin:0; background:#ffffff; }
+    html, body { height:100%; margin:0; background:#f8f8f7; }
     .tradingview-widget-container { width:100%; height:100vh; }
     .tradingview-widget-container__widget { width:100%; height:calc(100% - 24px); }
     .tradingview-widget-copyright { height:24px; line-height:24px; text-align:right; padding:0 8px; }
